# zaco-compiler

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/zaco-ast/: Cargo.toml
crates/zaco-ast/src/: decl.rs  expr.rs  lib.rs  module.rs  stmt.rs  types.rs
crates/zaco-codegen/: Cargo.toml
crates/zaco-codegen/src/: error.rs  lib.rs  runtime.rs  translator.rs
crates/zaco-driver/: Cargo.toml  README.md
crates/zaco-driver/src/: dep_graph.rs  dts_loader.rs  lib.rs  main.rs  npm_resolver.rs  package_json.rs  resolver.rs
crates/zaco-driver/tests/: integration.rs
crates/zaco-ir/: Cargo.toml
crates/zaco-ir/src/: function.rs  instruction.rs  lib.rs  lower.rs  module.rs  types.rs  value.rs
crates/zaco-lexer/: Cargo.toml  README.md
crates/zaco-lexer/examples/: basic_usage.rs
crates/zaco-lexer/src/: lexer.rs  lib.rs  token.rs
crates/zaco-parser/: Cargo.toml
crates/zaco-parser/src/: decl.rs  error.rs  expr.rs  helpers.rs  lib.rs  parser.rs  (+3 more)
crates/zaco-typeck/: Cargo.toml
docs/: async-await-implementation.md  lowerer-builtins-summary.md  runtime-functions-reference.md  rust-runtime-implementation.md
docs/plans/: 2026-02-14-module-system-design.md
examples/: builtin_modules.ts  classes.ts  fibonacci.ts  hello.ts  import_modules.ts  ownership.ts  test.ts
examples/modules/: circular_a.ts  circular_b.ts  main.ts  math.ts  missing_import.ts  simple_main.ts
examples/npm_test/: main.ts  package.json  scoped_test.ts
runtime/: zaco_runtime.c
runtime/zaco_runtime_rs/: .gitignore  Cargo.toml  README.md  build.sh  test_runtime.c  zaco_runtime_rs.h
(+22 files in other folders)
