[package]
name = "zaco-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
zaco-ir = { path = "../zaco-ir" }
zaco-ast = { path = "../zaco-ast" }
cranelift = "0.116.1"
cranelift-module = "0.116.1"
cranelift-object = "0.116.1"
cranelift-native = "0.116.1"
target-lexicon = "0.13"
